--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     />
     <meta name="theme-color" content="#ffffff" />
 
-    <title>Dogggo Home</title>
+    <title>Doggga Home</title>
   </head>
 
   <body>
