--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
           </div>
           <div class="wallet__inner-links">
             <a
-              href="https://charts.bogged.finance/?token=0x857dd3b493c49a8b060faf227d2b901e72621293"
+              href="not yet"
             >
               <img src="images/bogged.jpg" alt="" />
             </a>
