--- a/index.html
+++ b/index.html
@@ -379,11 +379,10 @@
       <div class="auto__container">
         <div class="wallet__inner">
           <h1>
-            <span> DOGGGO WALLET </span>
+            <span> DOGGGA TO THE MOON </span>
           </h1>
           <div class="wallet__inner-row">
             <div class="wallet__inner-column">
-              <img src="images/please.jpg" alt="" />
             </div>
             <div class="wallet__inner-column">
               <div class="wallet__inner-column-image">
@@ -403,7 +402,7 @@
             </div>
           </div>
           <div class="wallet__inner-video">
-            <img src="images/dogggo-video.gif" alt="" />
+
           </div>
           <div class="wallet__inner-links">
             <a
