--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
           <h1>
             <span> LATEST CHAPTER </span>
           </h1>
-          <a href="story.html#chapter5" class="story__inner-more">
+          <a href="https://t.me/DogggaToken" class="story__inner-more">
             <img src="images/latestchapter.gif" alt="" />
           </a>
         </div>
